Fix item overflow

--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@ body {
 .item-container {
     aspect-ratio: 1;
     position: relative;
+    overflow: hidden;
 
     .index {
         position: absolute;
